adding the working directory files

--- a/website/style.css
+++ b/website/style.css
@@ -1,5 +1,5 @@
 body{
-    background: #fffff8;
+    background: #c2c2d6;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
@@ -8,7 +8,7 @@ body{
     grid-auto-rows: minmax(150px, auto);
     /* grid-template-columns:  */
     height:100vh;
-    background: #f23557;
+    background: #c2c2d6;
     color: #f0d43a;
     justify-content: center;
     grid-gap: 1em;
@@ -66,17 +66,13 @@ input{
 
 button{
     width: 400px;
-    height: 100px;
+    height: 40px;
     background: #3b4a6b;
     color: #f0d43a;
     font-size: 26px;
     font-family: 'Oswald', sans-serif;
     border: none;
     box-shadow: 2px 4px 5px #444;
-}
-
-h1{
-    font-size: 36px;
 }
 
 textarea{
